--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-# wqsince1992.github.io
-my blog website
 <!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>极客学院</title>
+    <title>花田半亩</title>
     <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
@@ -44,7 +42,7 @@ my blog website
         </div>
 
         <div class="footing">
-            @jikexueyuan
+            @wqsince1992.github.io
         </div>
     </div>
 
