--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
             <div class="body">
                 <div class="body_title">
                     <h3>花田半亩</h3>
-                    <p>就这样结束了两年的任性生活，我要重新开始，以25岁该有的姿态，努力的生活，我接受这个残酷的事实，但是不代表我会因此而放弃。我还是会默默的进行着梦想的踏寻之旅！</p>
+                    <p>我愿意，
+                        你在年老时想起我，指着我发黄的照片，
+                        对什么人讲起，
+                        我们曾拥有的，最明亮的快乐。
+                        那会让生命的痕迹如雪上的脚印，坚实而圣洁。
+                        那会让我，在某处你不再知晓的角落，幸福得默默哭泣。
+                    </p>
                 </div>
                 <hr/>
                 <hr/>
