--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <div class="body">
                 <div class="body_title">
                     <h3>花田半亩</h3>
-                    <p>我愿意，
-                        你在年老时想起我，指着我发黄的照片，
-                        对什么人讲起，
-                        我们曾拥有的，最明亮的快乐。
-                        那会让生命的痕迹如雪上的脚印，坚实而圣洁。
+                    <p>我愿意，<br/>
+                        你在年老时想起我，指着我发黄的照片，<br/>
+                        对什么人讲起，<br/>
+                        我们曾拥有的，最明亮的快乐。<br/>
+                        那会让生命的痕迹如雪上的脚印，坚实而圣洁。<br/>
                         那会让我，在某处你不再知晓的角落，幸福得默默哭泣。
                     </p>
                 </div>
