--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         </ul>
                     </div>
                     <div class="heading_img">
-                        <img src="psb.jpg">
+                        <img src="14.jpg">
                     </div>
                     <div class="heading_soptlight">
                         <form>
